# learn_cmake

./: CMakeLists.txt  Makefile  README.txt
exe/: CMakeLists.txt  main.c
include/hello/: CMakeLists.txt  hello.h
lib/hello/: CMakeLists.txt  hello.c
